Changelog
=========

1.7 - (unreleased)
-----------------
 * Change: Added tooltips to all fields on aggregated edit [ghicaale #3420]
 * Bug fix: updated broken internal urls to EEA mamagement plan system [demarant]
 * Bug fix: fix javascript error when reloading relateditems fragment [tiberich #3591]
 * Bug fix: fix javascript in advanced edit for relations widget [tiberich #3579]
 * Change: Hide the add menu in the Specification and Assessment view and edit pages [tiberich #3583]
 * Bug fix: Fix the ims_timeline view [tiberich #3071]
 * Bug fix: Show member fullname and workflow state title in @@ims_overview [tiberich #3071]
 * Bug fix: Now "relatedItems" values are kept when creating a
     new Specification version [ghicaale #3582]
 * Change: Moved the Manager id edit field to the general metadata area. Small editorial changes. [demarant #3548]
 * Bug fix: Tests fixed after changing product name [ghicaale]
 * Feature: Use new filtering select widget for provider_url and dataset_url [tiberich #3530]
 * Bug fix: Added indicators_get_referer.py script to fix referer when
     using "tal expression" faceted widget [ghicaale #3538]
 * Bug fix: Change provider_url and dataset_url to use StringField instead of LinesField,
     also use new filtering select widget [tiberich #3530]

1.6 - (2010-08-17)
-----------------
 * Feature: Show indicator codes in title [demarant]
 * Change: Show TOC and generic metadata section on indicator factsheet as in assessments
 * Feature: Tags/keywords for an assessment are now calculated dynamically
     by its related content. Better view of tags and metadata [demarant]
 * Feature: customize assessment/@@createVersion to allow choosing the destination of that version [tiberich #3539]
 * Bug fix: Add "one_state_workflow" [tiberich #3152]
 * Bug fix: When set versionId on adding an assessment, also look for IndicatorFactSheets
     with same indicator set [ghicaale #3491]